<resources>
    <string name="app_name">NerdyBooK</string>
    <string name="navigation_drawer_open">Ouverture du menu de navigation</string>
    <string name="navigation_drawer_close">Fermeture du menu de navigation</string>
    <string name="nav_adventure_sheet">Feuille d\'aventure</string>
    <string name="nav_current_adventure">Reprendre l\'aventure</string>
    <string name="nav_statistics">Statistiques</string>
    <string name="nav_menu">Menu principal</string>
    <string name="roll_the_dices">Lancer les dés !</string>
    <string name="start_adventure">Démarrer l\'aventure !</string>
    <string name="menu_description">L\'application dont VOUS êtes le Héros.</string>
    <string name="menu_start">Commencer une nouvelle aventure !</string>
    <string name="menu_continue">Continuer une aventure !</string>
    <string name="adventure_selection">Choisir une aventure</string>
    <string name="adventure_talisman_of_death">Le Talisman de la Mort</string>
    <string name="adventure_marks_of_mayhem">Les Sceaux de la Destruction</string>
    <string name="adventure_coming_soon">Prochainement disponible !</string>
    <string name="no_saved_games">Aucune sauvegarde trouvée !</string>
    <string name="saved_games_title">Choisir une sauvegarde</string>
    <string name="saved_games_validate">Continuer cette aventure</string>
    <string name="saved_adventure">Aventure en cours :\u0020</string>
    <string name="saved_adventure_hint">Nom de l\'aventure</string>
    <string name="saved_chapters">Chapitres lus :\u0020</string>
    <string name="saved_chapters_hint">000</string>
    <string name="saved_difficulty">Difficulté : \u0020</string>
    <string name="saved_difficulty_hint">Facile / Normal</string>
    <string name="saved_stats">00 (00)</string>
    <string name="load_saved_game">Continuer cette aventure !</string>
    <string name="delete_saved_game">Supprimer cette aventure !</string>
    <string name="delete_dialog_title">Horreur, malheur, brocolis !</string>
    <string name="delete_dialog_message">Cette aventure va disparaître dans le Néant,
        et tout ce qui y a été accompli ne sera jamais chanté par les troubadours de tous horizons !!!</string>
    <string name="delete_dialog_yes">Tant mieux, ça nous fera des vacances...</string>
    <string name="delete_dialog_no">NOOOOON !!! Tout, mais pas le Néant !!!</string>
    <string name="choose_difficulty">Choisir une difficulté de jeu</string>
    <string name="adventure_validate_difficulty">Valider la difficulté !</string>
    <string name="easy_difficulty">Facile</string>
    <string name="easy_difficulty_sql">Facile</string>
    <string name="normal_difficulty">Normal</string>
    <string name="normal_difficulty_sql">Normal</string>
    <string name="hero_name">Nom du Héros :\u0020</string>
    <string name="hero_name_hint">Nom du Héros</string>
    <string name="hero_name_empty">Entrez un nom !</string>
    <string name="hero_name_create">Valider ce nom !</string>
    <string name="hero_ability">Habileté :\u0020</string>
    <string name="hero_stamina">Endurance :\u0020</string>
    <string name="hero_luck">Chance :\u0020</string>
    <string name="hero_ability_hint">Habileté du Héros</string>
    <string name="hero_stamina_hint">Endurance du Héros</string>
    <string name="hero_luck_hint">Chance du Héros</string>
    <string name="choose_potions">Choississez vos potions (vous en recevrez deux du type sélectionné)</string>
    <string name="ability_potions">Potions d\'Adresse</string>
    <string name="stamina_potions">Potions de Vigueur</string>
    <string name="luck_potions">Potions de Bonne Fortune</string>
    <string name="validate_potions_choice">Choisir ce type de potion !</string>
    <string name="ability">HABILETE</string>
    <string name="ability_value">%1$s (%2$s)</string>
    <string name="stamina">ENDURANCE</string>
    <string name="stamina_value">%1$s (%2$s)</string>
    <string name="luck">CHANCE</string>
    <string name="luck_value">%1$s (%2$s)</string>
    <string name="stuff">Equipement</string>
    <string name="provisions">Provisions</string>
    <string name="meals">Repas</string>
    <string name="golden_coins">Pièces d\'or</string>
    <string name="torchs">Torches</string>
    <string name="light_torch">Allumer une torche</string>
    <string name="eat_meal">Consommer un repas</string>
    <string name="potions">Potions</string>
    <string name="consume_ability_potion">Boire une potion d\'Adresse</string>
    <string name="consume_stamina_potion">Boire une potion de Vigueur</string>
    <string name="consume_luck_potion">Boire une potion de Bonne Fortune</string>
    <string name="play_luck_title">Tentez votre CHANCE !</string>
    <string name="hero_play_luck">Je tente ma CHANCE !</string>
    <string name="hero_luck_played">Vous avez tenté votre chance - il ne vous reste plus que %1$s points de CHANCE</string>
    <string name="hero_luck_played_null">Vous avez tenté votre chance - il ne vous reste plus de points de CHANCE</string>
    <string name="hero_ability_loss">Vous perdez %1$s points d\'HABILETE (il vous en reste %2$s).</string>
    <string name="hero_ability_null">Vous perdez %1$s points d\'HABILETE (et il ne vous en reste plus).</string>
    <string name="hero_stamina_loss">Vous perdez %1$s points d\'ENDURANCE (il vous en reste %2$s).</string>
    <string name="hero_stamina_null">Vous perdez %1$s points d\'ENDURANCE (et il ne vous en reste plus).</string>
    <string name="hero_luck_gain">Vous gagnez %1$s points de CHANCE (en tout, vous en avez %2$s).</string>
    <string name="hero_luck_loss">Vous perdez %1$s points de CHANCE (il vous en reste %2$s).</string>
    <string name="hero_luck_null">Vous perdez %1$s points de CHANCE (et il ne vous en reste plus).</string>
    <string name="hero_gold_coins_gain">Vous gagnez %1$s pièces d\'or (en tout, vous en avez %2$s).</string>
    <string name="hero_gold_coins_loss">Vous dépensez %1$s pièces d\'or (il vous en reste %2$s).</string>
    <string name="hero_gold_coins_loss_null">Vous dépensez %1$s pièces d\'or (et il ne vous en reste plus).</string>
    <string name="hero_gold_coins_loss_full">Vous avez perdu toutes vos pièces d\'or.</string>
    <string name="hero_meals_gain">Vous gagnez %1$s repas (en tout, vous en avez %2$s).</string>
    <string name="hero_meals_gain_golden_apple">Vous gagnez 1 Pomme d\'Or, qui équivaut à 1 repas (en tout, vous en avez %1$s).</string>
    <string name="hero_meals_loss_no_use">Vous utilisez %1$s repas, mais n\'en retirez aucun bénéfice (il vous en reste %2$s).</string>
    <string name="hero_meals_loss">Vous utilisez %1$s repas (il vous en reste %2$s).</string>
    <string name="hero_stuff_gain">L\'équipement %1$s est ajouté à votre inventaire.</string>
    <string name="hero_death">Ok, ça n\'est certainement pas une bonne nouvelle...</string>
    <string name="hero_death_title">Vous êtes mort.</string>
    <string name="hero_death_text">Malgré votre opiniâtreté et votre héroïsme, vos choix vous ont conduit à mourrir, et à être oublié par les conteurs et troubadours de tous horizons.\nVotre corps ne sera jamais retrouvé et se décomposera lentement jusqu\'à destruction complète. A moins qu\'il ne soit mangé par quelque créature.\n\nVotre aventure se termine ici.</string>
    <string name="hero_death_button">Je ferai mieux la prochaine fois.</string>
    <string name="talisman_stuff3">Talisman de la Mort</string>
    <string name="current_chapter">Chapitre %1$s</string>
</resources>