<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kgames.james.nerdybook.AdventureSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adventure_selection"
        android:layout_gravity="center"
        android:text="@string/adventure_selection"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_talisman"
        android:layout_gravity="center"
        android:text="@string/adventure_talisman_of_death"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_marks"
        android:layout_gravity="center"
        android:text="@string/adventure_marks_of_mayhem"/>

    </LinearLayout>

</LinearLayout>
